@@ -42,7 +42,8 @@ typedef struct tagGUITHREADINFO {
 	HWND hwndMoveSize;
 	HWND hwndCaret;
 	RECT rcCaret;
-} GUITHREADINFO,*PGUITHREADINFO;
+} GUITHREADINFO,*PGUITHREADINFO,*LPGUITHREADINFO;
+BOOL WINAPI GetGUIThreadInfo(DWORD,LPGUITHREADINFO);
 #endif /* (WINVER < 0x0500) */
 
 #ifdef __cplusplus
