@@ -2849,7 +2849,7 @@ typedef struct tagGUITHREADINFO {
 	HWND hwndMoveSize;
 	HWND hwndCaret;
 	RECT rcCaret;
-} GUITHREADINFO,*PGUITHREADINFO;
+} GUITHREADINFO,*PGUITHREADINFO,*LPGUITHREADINFO;
 #endif /* (WINVER >= 0x0500) */
 
 #define AnsiToOem CharToOemA
@@ -3178,6 +3178,9 @@ BOOL WINAPI GetAltTabInfoA(HWND,int,PALTTABINFO,LPSTR,UINT);
 BOOL WINAPI GetAltTabInfoW(HWND,int,PALTTABINFO,LPWSTR,UINT);
 BOOL WINAPI GetComboBoxInfo(HWND,PCOMBOBOXINFO);
 BOOL WINAPI GetCursorInfo(PCURSORINFO);
+#if (WINVER >= 0x0500)
+BOOL WINAPI GetGUIThreadInfo(DWORD,LPGUITHREADINFO);
+#endif
 BOOL WINAPI GetLastInputInfo(PLASTINPUTINFO);
 DWORD WINAPI GetListBoxInfo(HWND);
 BOOL WINAPI GetMenuBarInfo(HWND,LONG,LONG,PMENUBARINFO);
